Bug 857487 - Fix deleting a table row using the inline table editing UI; r=ehsan